# copier-rust-tauri

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  copier.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
copier/: settings.yml
copier/extensions/: context.py
copier/questions/: copyright.yml  features.yml  project.yml  vcs.yml
template/: .gitignore  README.md.jinja  biome.json  index.html.jinja  justfile  package.json.jinja  tsconfig.json  vite.config.ts  vitest.config.ts  {% if copyright_license == 'Proprietary' %}LICENSE{% endif %}.jinja  {% if with_changelog %}CHANGELOG.md{% endif %}
template/src-tauri/: Cargo.toml.jinja  build.rs.jinja  rustfmt.toml  tarpaulin.toml  tauri.conf.json.jinja
template/src-tauri/src/: lib.rs  main.rs.jinja
template/src/router/: index.ts
template/src/types/: env.d.ts  tauri.d.ts
template/src/views/: HomeView.vue
template/tests/: App.test.ts  HomeView.test.ts  router.test.ts
tests/: conftest.py  test_build_rs.py  test_cargo_toml.py  test_changelog.py  test_index_html.py  test_licenses.py  test_main_rs.py  test_package_json.py  test_readme.py  test_static.py  test_tauri_conf.py
